--- a/style.css
+++ b/style.css
@@ -87,3 +87,53 @@ video {
   vertical-align: baseline;
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Fraunces", serif;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+header {
+  height: 150px;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: lightyellow;
+  color: darkblue;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-container {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-and-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  object-fit: contain;
+}
+
+img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+button {
+  height: 50px;
+  width: 100px;
+  background: lightyellow;
+  border: 1px solid black;
+}
